# cmus-status

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
