[package]
name = "cmus-status"
description = "A crate to structure cmus status data."
version = "1.0.0"
edition = "2021"
authors = ["abigailsdev <abigailsdev@proton.me>"]
license = "MPL-2.0"
homepage = "https://github.com/abigailsdev/cmus-status"
repository = "https://github.com/abigailsdev/cmus-status"
readme = "README.md"
categories = ["data-structures", "value-formatting", "parsing"]

[dependencies]
